deployments/kustomize/apisix-auth-gateway/overlays/minikube/external-service.yaml
# ExternalName service to bridge NGINX Ingress (web3 namespace)
# to APISIX Gateway (apisix namespace)
apiVersion: v1
kind: Service
metadata:
  name: apisix-gateway
  namespace: web3
spec:
  type: ExternalName
  externalName: apisix-gateway.apisix.svc.cluster.local
  ports:
    - port: 9080
      targetPort: 9080
